vpc/sg_template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Security Group configuration for EKS VPC'

Parameters:
  NetworkStackName:
    Type: String
    Default: 'eks-test-network'
    Description: Name of the network stack to import VPC ID from
  
  VpcCidrBlock:
    Type: String
    Default: '172.26.0.0/16'
    Description: CIDR block of the VPC (must match the VPC configuration)
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))'

Resources:
  # Security Group for VPC Endpoints
  EksVpcEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: eks-test-sg-vpce
      GroupDescription: Security group for VPC endpoints allowing HTTPS traffic from VPC
      VpcId: !ImportValue
        Fn::Sub: '${NetworkStackName}-VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidrBlock
          Description: Allow HTTPS traffic from VPC
      Tags:
        - Key: Name
          Value: eks-test-sg-vpce

  # Security Group for EKS Cluster Control Plane ENI
  EksClusterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: eks-test-sg-cluster
      GroupDescription: Security group for EKS cluster control plane ENI
      VpcId: !ImportValue
        Fn::Sub: '${NetworkStackName}-VpcId'
      Tags:
        - Key: Name
          Value: eks-test-sg-cluster

  # Allow ingress from worker nodes to cluster
  EksClusterIngressFromWorkers:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref EksClusterSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref EksClusterSecurityGroup
      Description: Allow HTTPS from worker nodes to cluster control plane

  EksClusterIngressFromBastion:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref EksClusterSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: !Ref VpcCidrBlock
      Description: Allow HTTPS from worker nodes to cluster control plane

Outputs:
  VpcEndpointSecurityGroupId:
    Description: Security Group ID for VPC Endpoints
    Value: !Ref EksVpcEndpointSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-VpcEndpointSgId'
  
  VpcEndpointSecurityGroupName:
    Description: Security Group Name for VPC Endpoints
    Value: !GetAtt EksVpcEndpointSecurityGroup.GroupId
    Export:
      Name: !Sub '${AWS::StackName}-VpcEndpointSgName'

  ClusterSecurityGroupId:
    Description: Security Group ID for EKS Cluster Control Plane ENI
    Value: !Ref EksClusterSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-ClusterSgId'
  
  ClusterSecurityGroupName:
    Description: Security Group Name for EKS Cluster Control Plane
    Value: !GetAtt EksClusterSecurityGroup.GroupId
    Export:
      Name: !Sub '${AWS::StackName}-ClusterSgName'
